--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=gateway
-
-server.port=8082
+spring.server.port=8080
+  
+  # Eureka Configuration (if applicable)
+spring.cloud.gateway.routes.0.id=hello
+spring.cloud.gateway.routes.0.uri=https://httpbin.org/
+spring.cloud.gateway.routes.0.predicates = Path=/get
 spring.cloud.registry.eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.cloud.client.instance.id=my-unique-client-id-3
+  
+  # Client Configuration
+spring.cloud.client.instance.id=my-unique-client-id-70
+spring.cloud.client.config.import-check.enabled=false
+  
+  # Eureka Client Configuration (if applicable)
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-spring.cloud.config.import-check.enabled=false
